Some tests fixed